--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>CATALOGO DE PRODUCTOS MULTIMEDIA</h1>
-    <table border="1"
+    <table border="1">
       <thead>
         <tr>
           <th>Producto</th>
@@ -47,7 +47,7 @@
       <tfoot>
         <tr>
           <th colspan="3">Total de Producto: 3</th>
-          <th colspan="3.400.000">precio total: 3.400.000</th>
+          <th colspan="3.400.000">precio total: 3.</th>
         </tr>
       </tfoot>
     </table>
